Closed Bug 609838 Opened 14 years ago Closed 14 years ago

Fennec double-tap zoom is broken with HW acceleration enabled

Categories

(Core :: Graphics, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
Tracking Status
fennec 2.0b3+ ---

People

(Reporter: romaxa, Unassigned)

References

Details

Attachments

(3 files)

Take upstream nightly GTK fennec build for linux desktop

open some page like "file:///usr/share" or google.com

initiate zoom with double tap and zoom-out with another double tap:

RESULT:
Page looks broken and corrupted (different parts of the screen contain page zoomed with different values.)
Blocks: 598864
Attached image Screenshoot
ok, I've tested this bug with hacky patch from bug 
https://bugzilla.mozilla.org/attachment.cgi?id=488743&action=edit

And it seems zoomin/out correctly with that hack.

cjones: does it make sense?
Depends on: 610210
Hmm, not really :(.  I wonder if there's some race condition here, perhaps with texture-uploading?  If you added a sleep after the TextureImage update and the problem went away, that would be suspicious.  (My understanding is that tex*image2d is supposed to copy bits if it needs to, in order to avoid these races, but who knows.)
Comment on attachment 489512 [details] [diff] [review]
Fixed zoom problem, and perf of transparent HTML5 video

\o/
Attachment #489512 - Flags: review?(jones.chris.g) → review+
Attached image Another problem
When I apply patch with resolution fix, then it is fixing zoom problem and HTML5 performance, but I see these rendering problem when I opening http://camendesign.com/code/video_for_everybody/test.html
and scroll it down.
Can we land it?
blocking2.0: --- → ?
blocking2.0: ? → ---
tracking-fennec: --- → 2.0b3+
http://hg.mozilla.org/mozilla-central/rev/811a97636ef2
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Depends on: 611315
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: