Bug 609838 - Fennec double-tap zoom is broken with HW acceleration enabled. r=jones.chris.g a=b-f